# tinytunes

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  index.html  package.json  tailwind.config.js
.github/ISSUE_TEMPLATE/: bug_report.md
src/: App.tsx  index.css  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: migration-default-items.sql  migration-down.sql  migration-up.sql
src-tauri/src/: commands.rs  main.rs
src-tauri/src/app/: menu.rs
src-tauri/src/db/: connection.rs  mod.rs
src-tauri/src/db/entities/: mod.rs  preferences.rs  yt_item.rs
src-tauri/src/local_media/: commands.rs  file.rs  mod.rs
src-tauri/src/youtube/: commands.rs  mod.rs  ytdl.rs
src/@types/: index.ts  store.ts
src/components/: ContextMenu.tsx  Header.tsx  HeaderNavigation.tsx  Layout.tsx  NavigationButton.tsx  PlayerMediaSwitch.tsx  Theme.tsx  ThemeToggle.tsx  Toolbar.tsx
src/components/local/: LocalItem.tsx  LocalItemList.tsx
src/components/options/: AddItem.tsx  EditItem.tsx  ListOptions.tsx  SortConfig.tsx
src/components/ui/: AnimatedIconButton.tsx  Button.tsx  Code.tsx  Dropdown.tsx  FIlePicker.tsx  Heading.tsx  Input.tsx  Kbd.tsx  Loader.tsx  Modal.tsx  RadioGroup.tsx  Resizable.tsx  Select.tsx  Switch.tsx  Text.tsx  constants.ts
src/components/youtube/: ContextMenu.tsx  (+7 more)
src/hooks/: useKeyboard.ts  useKeyboardHandler.ts  useNavigate.ts
src/lib/: Navigator.ts  Stack.ts
src/pages/: Home.tsx  LocalMediaPlay.tsx  Play.tsx  Routes.tsx  Settings.tsx  YouTubePlay.tsx
src/store/: store.tsx
src/utils/: compare.ts  file.ts  url.ts
(+14 files in other folders)
