[package]
name = "TinyTunes"
version = "0.1.0"
description = "A music app that lives in your menubar"
authors = ["Aaron Leopold <https://www.aaronbleopold.com>"]
license = "MIT"
repository = "https://github.com/aaronleopold/tinytunes"
default-run = "TinyTunes"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.8", features = ["shell-execute", "system-tray"] }
sea-orm = { version = "0.3.2", features = [ "sqlx-sqlite", "runtime-async-std-native-tls" ] }
futures = "0.3.17"
anyhow = "1"
dirs = "4.0.0"
once_cell = "1.8.0"
log = "0.4.0"
env_logger = "0.8.4"
regex = "1"
lazy_static = "1.4.0"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
